--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run src",
+    "test:watch": "vitest src"
   },
   "dependencies": {
     "bootstrap": "^5.2.0-beta1",
@@ -20,6 +22,9 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
@@ -31,7 +36,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
-    "vite": "^3.0.2"
+    "vite": "^3.0.2",
+    "vitest": "^0.18.1"
   }
 }
