--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "react-super-responsive-table": "^5.2.1",
     "react-use-error-boundary": "^3.0.0",
     "styled-components": "^5.3.5"
   },
